--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ app/resource/css/bootstrap.min.css
 app/resource/js/bootstrap.bundle.min.js
 app/resource/img/logo.png
 app/resource/uploads/*
+db/SHOP.drawio
